
- QBool is gone. QString::contains, QByteArray::contains, and QList::contains
  used to return an internal QBool class so that the Qt3 code
  "if (a.contains() == 2)" wouldn't compile anymore. Such code cannot exist
  in Qt4, so these methods return a bool now. If your code used the undocumented
  QBool, simply replace it with bool.

- QMetaType::construct() has been renamed to QMetaType::create().

- QTestLib:
  * The QTRY_VERIFY and QTRY_COMPARE macros have been moved into QTestLib.
    These macros formerly lived in tests/shared/util.h but are now provided
    by including the <QtTest/QtTest> header. In addition,
    QTRY_VERIFY_WITH_TIMEOUT and QTRY_COMPARE_WITH_TIMEOUT are provided,
    allowing for specifying custom timeout values.
  * The QTEST_NOOP_MAIN macro has been removed from the API.  If a test is
    known at compile-time to be inapplicable for a particular build it should
    be omitted via .pro file logic, or the test should call QSKIP in the
    initTestCase() method to skip the entire test and report a meaningful
    explanation in the test log.
  * The DEPENDS_ON macro has been removed from the API.  This macro did nothing
    and misled some users to believe that they could make test functions depend
    on each other or impose an execution order on test functions.
  * The QTest::qt_snprintf function has been removed from the API.  This was an
    internal testlib function that was exposed in the public API due to its use
    in a public macro.  Any calls to this function should be replaced by a call
    to qsnprintf(), which comes from the <QtCore/QByteArray> header.
  * The QTest::pixmapsAreEqual() function has been removed from the API.
    Comparison of QPixmap objects should be done using QCOMPARE, which provides
    more informative output in the event of a failure.
  * The QSKIP macro no longer has the "mode" parameter, which caused problems
    for calculating test metrics, as the SkipAll mode hid information about